--- a/src/app/pages/bot/bot.component.html
+++ b/src/app/pages/bot/bot.component.html
@@ -2,16 +2,20 @@
 <div class="container">
         <div class="row justify-content-md-center">
                 <div class="col-lg-6">
+                         
         <mat-card>
                 <mat-card-header>
                         <div mat-card-avatar class="example-header-image"></div>
                         <mat-card-title>Chat window</mat-card-title>
                       </mat-card-header>
                       <mat-card-content>
+                                <p *ngFor="let chat of chats">
+                                                <span class="{{chat.who}}">{{chat.msg}}</span>
+                                              </p>
 <form class="form-chat" [formGroup]="chatForm" (ngSubmit)="onSubmit()">
       
         <mat-form-field class="chat-full-width">
-                <textarea matInput placeholder="message" formControlName="message"></textarea>
+                <input matInput placeholder="message" formControlName="message">
               </mat-form-field>
               <button mat-flat-button color="accent">Send</button>
       </form>
